<resources>
    <string name="app_name">HotelBooking</string>
    <string name="find_deal_for_any_season_from_copy_ncountry_home_to_city_flates">Find deal for any season from copy\ncountry home to city flates</string>
    <string name="stylish_hotels">Stylish hotels</string>
    <string name="a_selection_of_hotels_to_stay_verified_for_nquality_and_design">A Selection of hotels to stay verified for\nquality and design</string>
    <string name="save_your_payment_details_for_secure_nbooking_an_fast_reservation">Save your payment details for secure\nbooking an fast reservation</string>
    <string name="get_started">Get Started</string>
    <string name="best_deals">Best Deals</string>
    <string name="fast_booking">Fast Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_and_book">Discover and book</string>
    <string name="skip">SKIP</string>
    <string name="the_world_most_n_stylish_hotels">The world most\n Stylish hotels</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="create_an_account">create an account</string>
    <string name="terms_of_use_and_privacy_policy">Terms of Use and Privacy Policy</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>