<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:src="@drawable/ic_baseline_arrow_back_24"
          android:layout_margin="10dp"/>

        <Button
            android:id="@+id/goneToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/warner"
                android:text="@string/sign_up"
                android:textColor="@color/color_primary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name" />

                <EditText
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

                <EditText
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_btn"
                android:text="@string/create_an_account"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/or" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/gbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
          android:layout_marginBottom="30dp"
            android:text="@string/terms_of_use_and_privacy_policy"
            android:textAlignment="center"/>


    </RelativeLayout>
</layout>